<resources>
    <string name="app_name">InitImageCapture</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In:</string>
    <string name="go">Go</string>
    <string name="create_account_here">Create an account here</string>
    <string name="create_an_account">Create an Account:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="alreadyUser">If you already have an account, Log In here</string>
    <string name="full_name">full_name</string>
    <string name="full_name1">Full Name</string>
    <string name="userdetails">UserDetails</string>
    <string name="take_an_image">Take an Image</string>
    <string name="see_all_analyses">See All Analyses</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="today">Today</string>
    <string name="last_week">Last Week</string>
    <string name="analyses">Analyses</string>
    <string name="back">Back</string>
    <string name="image_capture">Image Capture</string>
    <string name="use_camera">Use Camera</string>
    <string name="general">General</string>
    <string name="accessibility">Accessibility</string>
    <string name="save">Save</string>
    <string name="placeholder">Placeholder</string>
    <string name="upload_image">Upload Image</string>
    <string name="get_image">Get Image</string>
    <string name="filter">Filter</string>
    <string name="capture">Capture</string>
    <string name="discard">Discard</string>
    <string name="would_you_like_to_save_this_image">Would you like to save this image?</string>
    <string name="initimagecapture">InitImageCapture</string>
    <string name="please_tap_on_the_center_of_the_dyed_area_in_the_image">Please tap on the center of the dyed area in the image:</string>
    <string name="get_analysis">Get Analysis</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="light_level">Light Level</string>
    <string name="title">Title</string>
    <string name="enter_some_information_about_this_sample">Enter some information about this sample:</string>
    <string name="original_image">Original Image:</string>
    <string name="warped_image">Warped Image:</string>
    <string name="corners_detected">Corners Detected:</string>
    <string name="sample_capture">Sample Capture</string>
    <string name="import_an_image">Import an Image</string>
    <string name="reactive_areas">Reactive Areas:</string>
    <string name="save_this_sample">Save this Sample</string>
    <string name="reactive_calculated_co2">Reactive Calculated %CO2:</string>
    <string name="non_reactive_calculated_co2">Non-reactive Calculated %CO2:</string>
    <string name="smart_wound_dressing_analysis">Smart Wound Dressing Analysis</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="average_red_value">Average Red Value:</string>
    <string-array name="months_array">
        <item>--</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>